# src/api/models/encode-asset-request-token-data.ts
@@ -1,27 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * Immutable X API
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * The version of the OpenAPI document: 3.0
- * Contact: support@immutable.com
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-
-// May contain unused imports in some cases
-// @ts-ignore
-import { EncodeAssetTokenData } from './encode-asset-token-data';
-
-/**
- * @type EncodeAssetRequestTokenData
- * Extra token information to be encoded
- * @export
- */
-export type EncodeAssetRequestTokenData = EncodeAssetTokenData;
-
-
