# src/api/models/index.ts
@@ -6,6 +6,7 @@ export * from './api-order-v3-buy';
 export * from './api-order-v3-maker-fees';
 export * from './api-order-v3-sell';
 export * from './api-order-v3-taker-fees';
+export * from './api-register-passport-user-request';
 export * from './asset';
 export * from './asset-properties';
 export * from './asset-with-orders';
@@ -39,7 +40,6 @@ export * from './currency-with-limits';
 export * from './deposit';
 export * from './encode-asset-request';
 export * from './encode-asset-request-token';
-export * from './encode-asset-request-token-data';
 export * from './encode-asset-response';
 export * from './encode-asset-token-data';
 export * from './exchange';
@@ -57,7 +57,6 @@ export * from './get-projects-response';
 export * from './get-signable-cancel-order-request';
 export * from './get-signable-cancel-order-response';
 export * from './get-signable-deposit-request';
-export * from './get-signable-deposit-request-token';
 export * from './get-signable-deposit-response';
 export * from './get-signable-order-request';
 export * from './get-signable-order-request-token-buy';
@@ -136,9 +135,7 @@ export * from './register-user-request';
 export * from './register-user-response';
 export * from './signable-token';
 export * from './signable-transfer-details';
-export * from './signable-transfer-details-token';
 export * from './signable-transfer-response-details';
-export * from './signable-transfer-response-details-token';
 export * from './store-maker-taker-fee';
 export * from './success-response';
 export * from './token';
