# src/api/models/signable-transfer-response-details-token.ts
@@ -1,27 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * Immutable X API
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * The version of the OpenAPI document: 3.0
- * Contact: support@immutable.com
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-
-// May contain unused imports in some cases
-// @ts-ignore
-import { SignableToken } from './signable-token';
-
-/**
- * @type SignableTransferResponseDetailsToken
- * Token in request to match in SDK implementation
- * @export
- */
-export type SignableTransferResponseDetailsToken = SignableToken;
-
-
